# VChat

./: .commitlintrc.json  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .lintstagedrc  .prettierrc.json  .releaserc  ADOPTERS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EASTER_EGGS.md  GOVERNANCE.md  INITIALIZATION_SUMMARY.md  LICENSE  LICENSES.md  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  STAKEHOLDERS.md  SUPPORT.md  USERS.md  eslint.config.js  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  todo.md  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SPONSORS.md  cla.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  SECURITY.yml
.github/workflows/: ci.yml  cla.yml  deploy-docs.yml  docs.yml  notifications.yml  release.yml  sbom.yml  sentry.yml  socket-security.yml  spotify-status.yml  wakatime.yml
.husky/: commit-msg  pre-commit  pre-push
docs/: .vale.ini  README.md  docs.json
docs/auth/: fido2.md
docs/chaos-engineering/: CHAOS_SCENARIOS.md
docs/developers/: installation.md  introduction.md  quickstart.md
docs/i18n/: README_DE.md  README_ES.md  (+2 more)
monitoring/: docker-compose.monitoring.yml
outputs/: workspace_output_1772661265_433.txt  workspace_output_1772661271_9912.txt  workspace_output_1772661295_2195.txt  workspace_output_1772661320_7345.txt
website/: .gitignore  docusaurus.config.js  package.json  sidebars.js
(+320 files in other folders)
