[workspace]
resolver = "2"
members = [
    "packages/core",
]
exclude = [
    "node_modules",
    "target",
    "dist",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Vantis Corp <dev@vcomm.dev>"]
license = "AGPL-3.0"
repository = "https://github.com/vantisCorp/VChat"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2